# airfilter

./: .gitattributes  MANIFEST.in  pyproject.toml  setup.cfg
src/airfilter/: _version.py  attach.py  cli.py  io.py
