[metadata]
name = airfilter
version = 0.0.1-dev0
author = Matt Rixman
author_email = matt@astronomer.io
description = Stream postgres logs (with `-c log_statement=all`) through this filter, get a more human-digestable show
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MatrixManAtYrService/airfilter
project_urls =
    Bug Tracker = https://github.com/MatrixManAtYrService/airfilter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click
    sh
    jq
    InquirerPy
    strip_ansi


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    airfilter = airfilter.cli:cli

[versioneer]
    VCS = git
    style = pep440
    versionfile_source = src/airfilter/_version.py
    versionfile_build = airfilter/_version.py
    tag_prefix = ""
    parentdir_prefix = airfilter-

